# sumuma

./: .gitignore  LICENSE  build.sh  manage.py  pyproject.toml  render.yaml
.github/: dependabot.yml
.github/workflows/: deploy.yml
account/: admin.py  forms.py  models.py  urls.py  views.py
account/migrations/: 0001_initial.py  0002_user_twitter_username.py
account/static/account/css/: style.css
account/static/account/js/: signup.js
account/templates/account/: accept_password_reset.html  activated.html  complete_password_reset.html  complete_provisional_registration.html  login.html  password_change.html  password_reset.html  send_registration_user.html  set_password.html  signup.html  update_user.html  user_detail.html
account/templates/account/mail_template/activation/: message.txt  subject.txt
account/templates/account/mail_template/password_reset/: message.txt  subject.txt
analyses/: urls.py  views.py
analyses/static/analyses/css/: style.css
analyses/templates/analyses/: accumulation.html  analyses_by_category.html  buttons.html  top.html  transition.html
budget/: apps.py  forms.py  models.py  urls.py  views.py
budget/migrations/: 0001_initial.py
budget/templates/budget/: create.html  edit.html  top.html
contact/: forms.py  urls.py  views.py
contact/templates/contact/: top.html
home/: urls.py  views.py
home/static/home/: robots.txt
home/static/home/js/: main.js
home/templates/home/: top.html
kakeibo/: admin.py  forms.py  models.py  serializers.py  urls.py  views.py
kakeibo/migrations/: 0001_initial.py
kakeibo/static/kakeibo/js/: functions.js
kakeibo/static/records/js/: functions.js
kakeibo/templates/kakeibo/: bottom_menu.html  categories.html  delete_form.html  edit.html  expenditure_form.html  income_form.html  top.html
kakeibo/templates/records/: edit.html  latest_registration_list.html  top.html
kakeibo/templatetags/: get_list.py
kakeibo/views/: kakeibo.py  records.py  top.py
kakeibo/views/api/: kakeibo.py
lp/: urls.py  views.py
lp/templates/lp/: base.html  general.html
shopping/: admin.py  forms.py  models.py  urls.py  views.py
shopping/migrations/: 0001_initial.py  0002_todo_category.py  0003_todo_is_registered.py  0004_todo_expenditure.py
shopping/static/shopping/js/: functions.js
shopping/templates/shopping/: create.html  create_todo.html  edit_todo.html  todo.html
sumuma/: asgi.py  settings.py  urls.py  wsgi.py
sumuma/concerns/: permission.py
sumuma/static/sumuma/js/: functions.js
sumuma/templates/: 403.html  404.html  500.html  503.html  auth_base.html  auth_user_secondary_base.html  gtm.html  gtm_noscript.html  home_base.html  home_footer.html  loggedin_base.html  loggedin_header.html  swagger-ui.html
sumuma/templates/body/: recaptcha.html
sumuma/templates/head/: google_adsense.html  recaptcha.html
theme/static_src/: package-lock.json
