[tool.poetry]
name = "sumuma"
version = "0.1.0"
description = ""
authors = ["uichi <37263474+uichi@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "3.12.1"
Django = "~4.2.11"
django-environ = "^0.11.2"
django-debug-toolbar = "^4.4.2"
django-tailwind = "^3.6.0"
mysqlclient = "^2.2.0"
djangorestframework = "^3.15.2"
drf-flex-fields = "^1.0.2"
drf-yasg = "1.21.5"
urllib3 = "2.2.2"
ruamel-yaml = "0.18.6"
wheel = "^0.43.0"
uwsgi = "^2.0.26"
django-browser-reload = "^1.12.1"
python-dateutil = "^2.9.0"
ruamel-yaml-clib = "^0.2.8"
packaging = "^24.1"
pytz = "^2024.1"
setuptools = "^70.0.0"
django-recaptcha = "^4.0.0"
drf-api-logger = "^1.1.15"
django-cors-headers = "^4.3.1"
django-anymail = {extras = ["brevo"], version = "^10.3"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
