[tool.poetry]
name = "sumuma"
version = "0.1.0"
description = ""
authors = ["にしゅう <37263474+nisyuu@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "3.12.9"
Django = "~4.2.26"
django-environ = "^0.11.2"
django-debug-toolbar = "^6.1.0"
django-tailwind = "^3.6.0"
djangorestframework = "^3.15.2"
drf-flex-fields = "^1.0.2"
drf-yasg = "1.21.11"
urllib3 = "2.2.2"
ruamel-yaml = "0.18.16"
wheel = "^0.43.0"
django-browser-reload = "^1.13.0"
python-dateutil = "^2.9.0"
ruamel-yaml-clib = "^0.2.8"
packaging = "^24.1"
pytz = "^2024.1"
setuptools = "^70.1.1"
django-recaptcha = "^4.0.0"
drf-api-logger = "^1.1.21"
django-cors-headers = "^4.4.0"
django-import-export = "^4.1.0"
psycopg2-binary = "^2.9.11"
dj-database-url = "^3.0.1"
whitenoise = {extras = ["brotli"], version = "^6.11.0"}
gunicorn = "^23.0.0"
uvicorn = "^0.38.0"
django-anymail = {extras = ["resend"], version = "^13.1"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
